Modified custom.css to fix issue on iPhone.

--- a/css/custom.css
+++ b/css/custom.css
@@ -27,6 +27,7 @@ a {
 
 @media only screen and (max-width: 350px) {
 	.zika-title {font-size:14px;}
+	.scrollable{height: 300px;}
 }
 
 .panel-primary>.panel-heading {
